fix: view-scroll 的scrollbar

--- a/src/pages/index/index.less
+++ b/src/pages/index/index.less
@@ -99,7 +99,7 @@ page {
     ::-webkit-scrollbar {
       width: 0;
       height: 0;
-      color: rgba(255, 255, 255, 0);
+      color: transparent;
       display: none;
     }
     // 滚动条
